# csp-simple-wms-bodies

./: CMakeLists.txt  LICENSE  README.md
gui/: wms_body_tab.html  wms_settings.html
gui/js/: csp-simple-wms-bodies.js
src/: Plugin.cpp  Plugin.hpp  SimpleBody.cpp  SimpleBody.hpp  SimpleWMSBody.cpp  SimpleWMSBody.hpp  ThreadPool.cpp  ThreadPool.hpp  WebMapTextureLoader.cpp  WebMapTextureLoader.hpp  logger.hpp  utils.cpp  utils.h  utils.hpp
